@@ -38,6 +38,10 @@
 <p>2017-08-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xbm.c (ReadXBMImage): Fix two denial of service (DOS)
+issues in ReadXBMImage() which result in the reader not
+returning. Problem was reported via email on Wed Aug 23 2017 by
+Xiaohei and Wangchu from Alibaba Security Team.</li>
 <li>coders/jnx.c (ReadJNXImage): Fix denial of service (DOS) issue
 in ReadJNXImage() whereby large amounts of CPU and memory
 resources may be consumed although the file itself does not
